2008-05-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: We should use the thread allocator for threaded
	* win/rules.vc:    builds. Added 'tclalloc' option to disable.

2008-05-14  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkPanedWindow.c (PanedWindowProxyCommand)
	(DisplayPanedWindow): Ensure that a zero width never gets fed to the
	underlying window system. [Bug 1639824]

2008-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/console.tcl: Support pixel sized font in +/- keybinding.
	* tests/listbox.test: -activestyle default is underline on windows.
	* tests/winDialog.test: Fixed hanging tk_chooseColor tests.

2008-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/tk.tcl: Support for ttk widgets in AmpWidget
	* doc/button.n: Note negative widths for button [Patch #1883418]

2008-05-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/ttk_*: 'identify' widget command is on all ttk widgets.

2008-05-04  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSAquaTheme.c: "default" and "focus" adornments
	should not be disjoint [Bug 1942785]

2008-04-27  Donal K. Fellows  <dkf@users.sf.net>

	* */*.c: A large tranche of getting rid of pre-C89-isms; if your
	compiler doesn't support things like proper function declarations,
	'void' and 'const', borrow a proper one when building Tcl. (The header
	files allow building things that link against Tcl with really ancient
	compilers still; the requirement is just when building Tcl itself.)

2008-04-25  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/treeview.tcl: BUGFIX: [$tv selection] takes
	a list of items, not a single item [Bug 1951733].

2008-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Include ws2_32 in the link list [Bug 1900872]
	* doc/menu.n: Minor change regarding the system menu [Bug 1887169]
	* doc/button.n: Minor clarification of button flash [Bug 1926223]
