@@ -1,5 +1,5 @@
 #
-# $Id: xpTheme.tcl,v 1.7 2008/04/03 11:52:42 patthoyts Exp $
+# $Id: xpTheme.tcl,v 1.8 2008/05/15 23:41:08 patthoyts Exp $
 #
 # Settings for 'xpnative' theme
 #
@@ -60,5 +60,28 @@ namespace eval ttk::theme::xpnative {
 	    ;
 
 	ttk::style configure Toolbutton -padding {4 4}
+
+	# Vista requires some style modifications. There are some
+	# additional or different elements in use.
+	if {[tk windowingsystem] eq "win32"
+	    && [info exists tcl_platform(osVersion)]
+	    && $tcl_platform(osVersion) >= 6.0} {
+
+	    ttk::style element create Combobox.field vsapi \
+		COMBOBOX 2 {{} 1}
+	    ttk::style element create Combobox.border vsapi \
+		COMBOBOX 4 {disabled 4 focus 3 active 2 {} 1}
+	    ttk::style layout TCombobox {
+		Combobox.border -sticky nswe -border 0 -children {
+		    Combobox.downarrow -side right -sticky ns
+		    Combobox.padding -expand 1 -sticky nswe -children {
+			Combobox.focus -expand 1 -sticky nswe -children {
+			    Combobox.textarea -sticky nswe
+			}
+		    }
+		}
+	    }
+
+	}
     }
 }
